--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -399,10 +399,10 @@
     <string name="daxMainNetworkStep211CtaText">Στην πραγματικότητα, οι ιχνηλάτες %s κρύβονται σε όλο το διαδίκτυο. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
     <string name="daxMainNetworkStep2CtaText">%s Θα αποκλείσω αυτούς τους ιχνηλάτες όταν περιηγείστε σε μη %s ιστότοπους.</string>
     <plurals name="daxTrackersBlockedCtaText">
-        <item quantity="one">και &lt;b&gt;%d άλλος&lt;/b&gt; προσπαθούσε να σας ιχνηλατήσει εδώ. &lt;br/&gt;&lt;br/&gt;Τον μπλοκάρισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
-        <item quantity="other">και &lt;b&gt;%d άλλοι&lt;/b&gt; προσπαθούσαν να σας εντοπίσουν εδώ. &lt;br/&gt;&lt;br/&gt;Τους εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
+        <item quantity="one">&#160;και &lt;b&gt;%d άλλος&lt;/b&gt; προσπαθούσε να σας ιχνηλατήσει εδώ. &lt;br/&gt;&lt;br/&gt;Τον μπλοκάρισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
+        <item quantity="other">&#160;και &lt;b&gt;%d άλλοι&lt;/b&gt; προσπαθούσαν να σας εντοπίσουν εδώ. &lt;br/&gt;&lt;br/&gt;Τους εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">προσπαθούσε να σας εντοπίσει εδώ. &lt;br/&gt;&lt;br/&gt;Το εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</string>
+    <string name="daxTrackersBlockedCtaZeroText">&#160;προσπαθούσε να σας εντοπίσει εδώ. &lt;br/&gt;&lt;br/&gt;Το εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Αποκτήστε τις επίσημες πληροφορίες και συμβουλές για το COVID-19.</string>
