--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -399,10 +399,10 @@
     <string name="daxMainNetworkStep211CtaText">A(z) %s nyomkövetők valójában az egész interneten leselkednek. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
     <string name="daxMainNetworkStep2CtaText">%s Letiltom ezeket a nyomkövetőket, ha nem-%s helyeken böngész.</string>
     <plurals name="daxTrackersBlockedCtaText">
-        <item quantity="one">és &lt;b&gt;%d másik&lt;/b&gt; itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam őket!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
-        <item quantity="other">és &lt;b&gt;%d másik&lt;/b&gt; itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam őket!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
+        <item quantity="one">&#160;és &lt;b&gt;%d másik&lt;/b&gt; itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam őket!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
+        <item quantity="other">&#160;és &lt;b&gt;%d másik&lt;/b&gt; itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam őket!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</string>
+    <string name="daxTrackersBlockedCtaZeroText">&#160;itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Kapjon hivatalos információt és tippeket a COVID-19-ről.</string>
