--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -399,10 +399,10 @@
     <string name="daxMainNetworkStep211CtaText">In feite liggen er overal op internet %s trackers op de loer. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
     <string name="daxMainNetworkStep2CtaText">%s Ik blokkeer deze trackers wanneer u niet-%s sites bezoekt.</string>
     <plurals name="daxTrackersBlockedCtaText">
-        <item quantity="one"> en &lt;b&gt;%d anderen &lt;/b&gt; probeerden u hier te volgen. &lt;br/&gt;&lt;br/&gt;Ik heb ze geblokkeerd!&lt;br/&gt;&lt;br/&gt; ☝️U kunt de URL-balk bekijken om te zien wie u probeert te volgen wanneer u een nieuwe site bezoekt.️</item>
-        <item quantity="other">en &lt;b&gt;%d anderen&lt;/b&gt; probeerden u hier te volgen. &lt;br/&gt;&lt;br/&gt;Ik heb ze geblokkeerd!&lt;br/&gt;&lt;br/&gt; ☝️U kunt de URL-balk bekijken om te zien wie u probeert te volgen wanneer u een nieuwe site bezoekt.️</item>
+        <item quantity="one">&#160;en &lt;b&gt;%d anderen &lt;/b&gt; probeerden u hier te volgen. &lt;br/&gt;&lt;br/&gt;Ik heb ze geblokkeerd!&lt;br/&gt;&lt;br/&gt; ☝️U kunt de URL-balk bekijken om te zien wie u probeert te volgen wanneer u een nieuwe site bezoekt.️</item>
+        <item quantity="other">&#160;en &lt;b&gt;%d anderen&lt;/b&gt; probeerden u hier te volgen. &lt;br/&gt;&lt;br/&gt;Ik heb ze geblokkeerd!&lt;br/&gt;&lt;br/&gt; ☝️U kunt de URL-balk bekijken om te zien wie u probeert te volgen wanneer u een nieuwe site bezoekt.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText"> probeerde u hier te volgen. &lt;br/&gt;&lt;br/&gt;Ik heb het geblokkeerd!&lt;br/&gt;&lt;br/&gt; ☝️U kunt de URL-balk bekijken om te zien wie u probeert te volgen wanneer u een nieuwe site bezoekt.️</string>
+    <string name="daxTrackersBlockedCtaZeroText">&#160;probeerde u hier te volgen. &lt;br/&gt;&lt;br/&gt;Ik heb het geblokkeerd!&lt;br/&gt;&lt;br/&gt; ☝️U kunt de URL-balk bekijken om te zien wie u probeert te volgen wanneer u een nieuwe site bezoekt.️</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Ontvang officiële COVID-19 info en tips.</string>
