--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -422,12 +422,12 @@
     <string name="daxMainNetworkStep211CtaText">На самом деле, программы отслеживания %s скрываются по всему Интернету. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
     <string name="daxMainNetworkStep2CtaText">%sЯ заблокирую программы отслеживания во время посещения сайтов %s.</string>
     <plurals name="daxTrackersBlockedCtaText">
-        <item quantity="one"> и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
-        <item quantity="few"> и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
-        <item quantity="many"> и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
-        <item quantity="other"> и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
+        <item quantity="one">&#160;и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
+        <item quantity="few">&#160;и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
+        <item quantity="many">&#160;и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
+        <item quantity="other">&#160;и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">  пытался отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал это!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</string>
+    <string name="daxTrackersBlockedCtaZeroText">&#160;пытался отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал это!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Получить официальную информацию и советы в связи с COVID-19.</string>
